apep_0054/v4/REPLICATION.md
# Replication Package: apep_0154

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `all_event_studies.rds`
- `bootstrap_results.rds`
- `cps_analysis.rds`
- `cps_asec_raw.rds`
- `cs_main_result.rds`
- `descriptive_stats.rds`
- `event_study_data.rds`
- `honestdid_results.rds`
- `main_results.rds`
- `power_analysis.rds`
- `robustness_results.rds`
- `spillover_results.rds`
- `state_year_panel.rds`
- `timing_sensitivity.rds`
- `transparency_laws.rds`
- `transparency_laws_treated.csv`
- `wage_bounds_info.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `00_policy_data.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_descriptives.R`
- `04_main_analysis.R`
- `05_robustness.R`
- `06_figures.R`
- `07_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
